syntax = "proto3";

import "google/protobuf/any.proto";

message SignedObj {
  string owner = 1;
  string pubKey = 2;
  int32 version = 4;
  repeated SignedObjPayload payload = 10;
}

message SignedObjPayload {
  string signature = 1;
  google.protobuf.Any data = 10;
}